# interpretability-playground

./: .gitignore  README.md  main.py  pyproject.toml
outputs/: paris_logit_attribution.csv
scripts/: 00_smoke_test.py  01_logit_attribution.py  01_paris_logit_attribution.py  02_interpretability_basics.py  02_patch_france_into_italy.py  03_starter_interpretability.py
src/mechanistic_interpretability/: __init__.py  utils.py
