[project]
name = "mechanistic-interpretability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "torch>=2.12.0",
    "transformer-lens>=3.3.0",
    "transformers>=5.11.0",
]
